feat: backport collision optimizer to Minecraft 1.21.1